# EveSDEImporter

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake
parser/: SDEParser.cpp  SDEParser.h
src/: CMakeLists.txt  main.cpp
src/parser/: CMakeLists.txt  SDEParser.cpp  SDEParser.h
tests/: CMakeLists.txt  parser_tests.cpp  parser_tests_with_fakes.cpp
